--- a/com.dynamo.cr.tileeditor/plugin.xml
+++ b/com.dynamo.cr.tileeditor/plugin.xml
@@ -833,25 +833,23 @@
          <activeWhen>
             <and>
                <reference
-                     definitionId="com.dynamo.cr.sceneed.definitions.selectionDeleteable">
-               </reference>
-               <reference
                      definitionId="com.dynamo.cr.tileeditor.definitions.gridEditorActive">
                </reference>
+               <with
+                     variable="selection">
+                  <and>
+                     <count
+                           value="1">
+                     </count>
+                     <iterate>
+                        <instanceof
+                              value="com.dynamo.cr.tileeditor.core.Layer">
+                        </instanceof>
+                     </iterate>
+                  </and>
+               </with>
             </and>
          </activeWhen>
-         <enabledWhen>
-            <with
-                  variable="selection">
-               <iterate
-                     ifEmpty="false"
-                     operator="and">
-                  <instanceof
-                        value="com.dynamo.cr.tileeditor.core.Layer">
-                  </instanceof>
-               </iterate>
-            </with>
-         </enabledWhen>
       </handler>
       <handler
             class="com.dynamo.cr.tileeditor.commands.AddLayer"
