--- a/com.dynamo.cr.engine/build.properties
+++ b/com.dynamo.cr.engine/build.properties
@@ -2,4 +2,5 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               bin/
+               bin/,\
+               engine/
