--- a/com.dynamo.cr.server/build.properties
+++ b/com.dynamo.cr.server/build.properties
@@ -20,4 +20,5 @@ bin.includes = META-INF/,\
                ext/grizzly-framework-2.1.2.jar,\
                ext/grizzly-http-servlet-2.1.2.jar,\
                ext/jersey-grizzly2-servlet-1.11.jar,\
-               ext/jersey-servlet-1.11.jar
+               ext/jersey-servlet-1.11.jar,\
+               ext/joda-time-2.1.jar
