--- a/com.dynamo.cr.server/config/rasv.config
+++ b/com.dynamo.cr.server/config/rasv.config
@@ -7,6 +7,7 @@ persistence_unit_name: "unit-test"
 repository_root: "/home/rasv/tmp/test_repos"
 progress_re: "\\[(\\d+)/(\\d+)\\]"
 builtins_directory: "/home/rasv/tmp/dynamo_home/content/builtins"
+data_server_enabled: 1
 
 configure_command: {
   args: "waf"
