Invitation support. case 765 * Changed JobQueue to work on a current provided EntityManager in order to support compositional transactions * Google guide add to com.dynamo.cr.server with the following configured  - configurationFile  - IMailProcessor  - IMailer  - EntityManagerFactory  - Server * Email and invitation configuration to configuration *

--- a/com.dynamo.cr.server/config/chmu.config
+++ b/com.dynamo.cr.server/config/chmu.config
@@ -7,6 +7,21 @@ persistence_unit_name: "unit-test"
 repository_root: "/Users/chmu/Projects/dynamo/test_repos"
 progress_re: "\\[(\\d+)/(\\d+)\\]"
 builtins_directory: "/Users/chmu/tmp/dynamo-home/content/builtins"
+smtp_host: ""
+smtp_username: ""
+smtp_password: ""
+
+registrationTemplate {
+    from: "noreply@defold.se"
+    subject: "registration"
+    message: "Registration message"
+}
+
+invitationTemplate {
+    from: "noreply@defold.se"
+    subject: "invitation"
+    message: "Invitation message"
+}
 
 configure_command: {
   args: "waf"
