--- a/com.dynamo.cr.server.test/test_data/crepo_test.config
+++ b/com.dynamo.cr.server.test/test_data/crepo_test.config
@@ -6,6 +6,21 @@ build_data_port: 6001
 persistence_unit_name: "unit-test"
 repository_root: "tmp/test_data"
 progress_re: "\\[(\\d+)/(\\d+)\\]"
+smtp_host: ""
+smtp_username: ""
+smtp_password: ""
+
+registrationTemplate {
+    from: "noreply@defold.se"
+    subject: "registration"
+    message: "Registration message"
+}
+
+invitationTemplate {
+    from: "noreply@defold.se"
+    subject: "invitation"
+    message: "${key}"
+}
 
 applications: {
   platform: "linux"
