--- a/com.dynamo.cr.server/.classpath
+++ b/com.dynamo.cr.server/.classpath
@@ -2,14 +2,14 @@
 <classpath>
 	<classpathentry exported="true" kind="lib" path="ext/joda-time-2.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="ext/jersey-servlet-1.11.jar"/>
-	<classpathentry exported="true" kind="lib" path="ext/jersey-grizzly2-servlet-1.11.jar"/>
+	<classpathentry exported="true" kind="lib" path="ext/jersey-grizzly2-servlet-1.11.jar" sourcepath="/Users/chmu/Downloads/jersey-grizzly2-servlet-1.11-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="ext/grizzly-http-servlet-2.1.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="ext/grizzly-framework-2.1.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="ext/grizzly-http-2.1.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="ext/grizzly-http-server-2.1.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="ext/jersey-client-1.11.jar"/>
 	<classpathentry exported="true" kind="lib" path="ext/jersey-core-1.11.jar"/>
-	<classpathentry exported="true" kind="lib" path="ext/jersey-grizzly2-1.11.jar"/>
+	<classpathentry exported="true" kind="lib" path="ext/jersey-grizzly2-1.11.jar" sourcepath="/Users/chmu/Downloads/jersey-grizzly2-1.11-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="ext/jersey-server-1.11.jar"/>
 	<classpathentry exported="true" kind="lib" path="ext/commons-codec-1.5.jar"/>
 	<classpathentry exported="true" kind="lib" path="ext/jetty-all-7.0.2.v20100331.jar"/>
