Container managed transactions. case 774 * Transactions are now managed by google guice-persist * Imported guice-persist and change to use eclipse-link entity-manager-factory instead of default. Configuring java.persitance.Persistance is difficult and requries tailored start levels. Thats the primary reason why we imported guile-persist. It is slight modified from 3.0-version in order to avoid references to internal classes. * Removed singletons hacks for @Context-injection. Most stuff is now injected with guice instead * Changed to use @Transacional instead of manual transaction * Important to remember to call flush() if you rely on generated id:s from newly created instances * Added jersey-guice for guice support in jersey * Changed ServerException to non-checked as transactions are only rolled back for RuntimeExceptions

--- a/com.dynamo.cr.server/.classpath
+++ b/com.dynamo.cr.server/.classpath
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="ext/guice-servlet-3.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="ext/jersey-guice-1.11.jar"/>
 	<classpathentry exported="true" kind="lib" path="ext/joda-time-2.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="ext/jersey-servlet-1.11.jar"/>
 	<classpathentry exported="true" kind="lib" path="ext/jersey-grizzly2-servlet-1.11.jar" sourcepath="/Users/chmu/Downloads/jersey-grizzly2-servlet-1.11-sources.jar"/>
