--- a/com.dynamo.cr.server/build.properties
+++ b/com.dynamo.cr.server/build.properties
@@ -21,4 +21,6 @@ bin.includes = META-INF/,\
                ext/grizzly-http-servlet-2.1.2.jar,\
                ext/jersey-grizzly2-servlet-1.11.jar,\
                ext/jersey-servlet-1.11.jar,\
-               ext/joda-time-2.1.jar
+               ext/joda-time-2.1.jar,\
+               ext/jersey-guice-1.11.jar,\
+               ext/guice-servlet-3.0.jar
