Fixed my config file.

--- a/com.dynamo.cr.server/config/rasv.config
+++ b/com.dynamo.cr.server/config/rasv.config
@@ -1,5 +1,5 @@
 hostname: "localhost"
-branch_root: "/tmp/br"
+branch_root: "/home/rasv/tmp/branch_root"
 filters: ".*?\\.git"
 service_port: 9998
 build_data_port: 6000
@@ -7,7 +7,21 @@ persistence_unit_name: "unit-test"
 repository_root: "/home/rasv/tmp/test_repos"
 progress_re: "\\[(\\d+)/(\\d+)\\]"
 builtins_directory: "/home/rasv/tmp/dynamo_home/content/builtins"
-data_server_enabled: 1
+smtp_host: ""
+smtp_username: ""
+smtp_password: ""
+
+registrationTemplate {
+    from: "noreply@defold.se"
+    subject: "registration"
+    message: "Registration message"
+}
+
+invitationTemplate {
+    from: "noreply@defold.se"
+    subject: "invitation"
+    message: "Invitation message"
+}
 
 configure_command: {
   args: "waf"
