Completed invitation backend. case 765 * Loose coupling between User and Invitation (email+initial invitation count) * columns originalcount+currentcount in InvitationAccount * Invitation-progression-map defined in config files * Correct values in invitation account * Tests

--- a/com.dynamo.cr.server.test/test_data/crepo_test.config
+++ b/com.dynamo.cr.server.test/test_data/crepo_test.config
@@ -22,6 +22,8 @@ invitationTemplate {
     message: "${key}"
 }
 
+invitationCountMap { key: 1 value: 2 }
+
 applications: {
   platform: "linux"
   name: "fake_engine"
