Fixed registration key during registration and invitations in dashboard. case 779

--- a/com.dynamo.cr.server.test/test_data/crepo_test.config
+++ b/com.dynamo.cr.server.test/test_data/crepo_test.config
@@ -10,19 +10,19 @@ smtp_host: ""
 smtp_username: ""
 smtp_password: ""
 
-registrationTemplate {
+registration_template {
     from: "noreply@defold.se"
     subject: "registration"
     message: "Registration message"
 }
 
-invitationTemplate {
+invitation_template {
     from: "noreply@defold.se"
     subject: "invitation"
     message: "${key}"
 }
 
-invitationCountMap { key: 1 value: 2 }
+invitation_count_map { key: 1 value: 2 }
 
 applications: {
   platform: "linux"
