--- a/com.dynamo.cr.server/config/chmu.config
+++ b/com.dynamo.cr.server/config/chmu.config
@@ -11,13 +11,13 @@ smtp_host: ""
 smtp_username: ""
 smtp_password: ""
 
-registrationTemplate {
+registration_template {
     from: "noreply@defold.se"
     subject: "registration"
     message: "Registration message"
 }
 
-invitationTemplate {
+invitation_template {
     from: "noreply@defold.se"
     subject: "invitation"
     message: "Invitation message"
