--- a/com.dynamo.cr.server/config/rasv.config
+++ b/com.dynamo.cr.server/config/rasv.config
@@ -11,17 +11,21 @@ smtp_host: ""
 smtp_username: ""
 smtp_password: ""
 
-registrationTemplate {
+registration_template {
     from: "noreply@defold.se"
     subject: "registration"
     message: "Registration message"
 }
 
-invitationTemplate {
+invitation_template {
     from: "noreply@defold.se"
     subject: "invitation"
     message: "Invitation message"
 }
+
+invitation_count_map { key: 1 value: 0 }
+test_registration_key: "key"
+test_invitation_count: 1
 
 configure_command: {
   args: "waf"
