--- a/com.dynamo.cr.server/config/rasv.config
+++ b/com.dynamo.cr.server/config/rasv.config
@@ -7,9 +7,9 @@ persistence_unit_name: "unit-test"
 repository_root: "/home/rasv/tmp/test_repos"
 progress_re: "\\[(\\d+)/(\\d+)\\]"
 builtins_directory: "/home/rasv/tmp/dynamo_home/content/builtins"
-smtp_host: ""
-smtp_username: ""
-smtp_password: ""
+smtp_host: "smtp.gmail.com"
+smtp_username: "noreply@defold.se"
+smtp_password: "kodri7Knydva"
 
 registration_template {
     from: "noreply@defold.se"
@@ -19,8 +19,8 @@ registration_template {
 
 invitation_template {
     from: "noreply@defold.se"
-    subject: "invitation"
-    message: "Invitation message"
+    subject: "Invitation"
+    message: "Invitation message\ninviter: ${inviter}\nkey: ${key}"
 }
 
 invitation_count_map { key: 1 value: 0 }
