--- a/com.dynamo.cr.server/config/rasv.config
+++ b/com.dynamo.cr.server/config/rasv.config
@@ -27,6 +27,12 @@ invitation_count_map { key: 1 value: 0 }
 test_registration_key: "key"
 test_invitation_count: 1
 
+applications: {
+  platform: "linux"
+  name: "dmengine"
+  path: "/home/rasv/tmp/dynamo_home/bin/linux/dmengine"
+}
+
 configure_command: {
   args: "waf"
   args: "configure"
@@ -44,4 +50,10 @@ exe_command: {
   args: "{executable}"
   args: "--config=resource.uri=http://localhost:6000/{project}/{user}/{branch}/build/default/content"
   args: "http://localhost:6000/{project}/{user}/{branch}/build/default/content/game.projectc"
+}
+
+project_templates {
+    id: "hud"
+    path: "/home/rasv/tmp/dynamo_home/content/samples/hud"
+    description: "Script Sample: Hud"
 }
