--- a/com.dynamo.cr.server/config/rasv.config
+++ b/com.dynamo.cr.server/config/rasv.config
@@ -53,7 +53,31 @@ exe_command: {
 }
 
 project_templates {
+    id: "side_scroller"
+    path: "/home/rasv/tmp/dynamo_home/content/tutorials/side_scroller"
+    description: "Tutorial: Side-Scroller"
+}
+
+project_templates {
     id: "hud"
     path: "/home/rasv/tmp/dynamo_home/content/samples/hud"
     description: "Script Sample: Hud"
+}
+
+project_templates {
+    id: "level_complete"
+    path: "/home/rasv/tmp/dynamo_home/content/samples/level_complete"
+    description: "Script Sample: Level Complete"
+}
+
+project_templates {
+    id: "main_menu"
+    path: "/home/rasv/tmp/dynamo_home/content/samples/main_menu"
+    description: "Script Sample: Main Menu"
+}
+
+project_templates {
+    id: "parallax"
+    path: "/home/rasv/tmp/dynamo_home/content/samples/parallax"
+    description: "Script Sample: Parallax"
 }
