--- a/com.dynamo.cr.parent/pom.xml
+++ b/com.dynamo.cr.parent/pom.xml
@@ -114,6 +114,7 @@
         <module>../com.dynamo.cr.go</module>
         <module>../com.dynamo.cr.go.test</module>
         <module>../com.dynamo.cr.dgit</module>
+        <module>../com.dynamo.cr.dgit.test</module>
         <module>../com.dynamo.cr.branchrepo</module>
         <module>../com.dynamo.cr.builtins</module>
         <module>../com.dynamo.cr.engine</module>
