--- a/com.dynamo.cr.dgit/build.properties
+++ b/com.dynamo.cr.dgit/build.properties
@@ -4,4 +4,5 @@ bin.includes = META-INF/,\
                .,\
                lib/jsch-0.1.44-1.jar,\
                lib/org.eclipse.jgit-1.2.0.201112221803-r.jar,\
-               lib/org.eclipse.jgit.http.server-1.2.0.201112221803-r.jar
+               lib/org.eclipse.jgit.http.server-1.2.0.201112221803-r.jar,\
+               git/
