--- a/com.dynamo.cr.web2/war/WEB-INF/web.xml
+++ b/com.dynamo.cr.web2/war/WEB-INF/web.xml
@@ -5,25 +5,25 @@
 
 <web-app>
 
-  <!-- Servlets -->
+	<!-- Default page to serve -->
+	<welcome-file-list>
+		<welcome-file>Defold.html</welcome-file>
+	</welcome-file-list>
 
-  <!-- Default page to serve -->
-  <welcome-file-list>
-    <welcome-file>Defold.html</welcome-file>
-  </welcome-file-list>
+	<filter>
+		<filter-name>crawlFilter</filter-name>
+		<filter-class>com.dynamo.cr.web2.server.CrawlFilter</filter-class>
+	</filter>
 
-  <security-constraint>
-      <web-resource-collection>
-          <url-pattern>/*</url-pattern>
-      </web-resource-collection>
-      <auth-constraint>
-          <role-name>*</role-name>
-      </auth-constraint>
-  </security-constraint>
+	<filter-mapping>
+		<filter-name>crawlFilter</filter-name>
+		<url-pattern>*</url-pattern>
+	</filter-mapping>
 
-  <mime-mapping>
-    <extension>mp4</extension>
-    <mime-type>video/mp4</mime-type>
-  </mime-mapping>
+	<mime-mapping>
+		<extension>mp4</extension>
+		<mime-type>video/mp4</mime-type>
+	</mime-mapping>
 
 </web-app>
+
