--- a/com.dynamo.cr.server/config/rasv.config
+++ b/com.dynamo.cr.server/config/rasv.config
@@ -11,19 +11,16 @@ smtp_host: "smtp.gmail.com"
 smtp_username: "noreply@defold.se"
 smtp_password: "kodri7Knydva"
 
-registration_template {
-    from: "noreply@defold.se"
-    subject: "registration"
-    message: "Registration message"
-}
-
 invitation_template {
     from: "noreply@defold.se"
-    subject: "Invitation"
-    message: "Invitation message\ninviter: ${inviter}\nkey: ${key}"
+    subject: "Invitation from ${inviter}"
+    message: "Hi!\n\n${inviter} wants you to start using the Defold alpha!\n\nDefold is a great service for making games and interactive applications together and is currently specialized on 2D games. Our key goal is to enable anyone to realize their ideas through a simple, yet professional service.\n\nStart by creating an account here: http://defold.com/#login:${key}\n\nGetting Started\nAfter you have registered, you are taken to the dashboard which contains information on how to get started. There are lots of other useful information on the documentation page: http://defold.com/#documentation:\nIf you still feel left in uncertainty, you should head to our forum: http://defold.userecho.com/\nIf you want to know what we are working on as it happens, you should follow us on twitter: https://twitter.com/#!/defoldengine\n\nAlpha\nDefold is currently in alpha phase, which means that the service is not yet complete and has a few knots which still need to be untied. This is why it's currently 100% free to use, and will be for at least an additional 3 months when you register during the alpha stage. In return we hope you will provide us with plenty of feedback as we are in dire need of it.\n\nPricing\nWe want everyone to be able to use our service. We don't really believe in traditional \"free\" or \"trial\" versions of commercial software, which are usually just crippled and unusable appetizers of the real thing. We want everyone to have the same opportunities. We reflect this in our pricing model by not charging anything if you want to try it out, and charge more if you are serious about your projects:\n\n$0/month - 1 person/project\n$20/month - 2 persons/project\n$150/month - Unlimited number of persons/project\n\nDuring the beta phase we will never charge more than $20/month.\n\nWe would be really happy to have you on board and we hope you will appreciate Defold!\n\n/The Defold Team"
 }
 
-invitation_count_map { key: 1 value: 0 }
+invitation_count_map { key: 100 value: 5 }
+invitation_count_map { key: 5 value: 2 }
+invitation_count_map { key: 2 value: 1 }
+
 test_registration_key: "key"
 test_invitation_count: 1
 
