--- a/com.dynamo.cr.web2/.settings/com.google.appengine.eclipse.core.prefs
+++ b/com.dynamo.cr.web2/.settings/com.google.appengine.eclipse.core.prefs
@@ -1,6 +1,5 @@
-#Sun Apr 01 09:41:47 CEST 2012
 eclipse.preferences.version=1
-filesCopiedToWebInfLib=geronimo-jpa_3.0_spec-1.1.1.jar|datanucleus-appengine-1.0.9.final.jar|datanucleus-jpa-1.1.5.jar|geronimo-jta_1.1_spec-1.1.1.jar|jdo2-api-2.3-eb.jar|datanucleus-core-1.1.5.jar|appengine-jsr107cache-1.5.5.jar|appengine-api-labs-1.5.5.jar|appengine-api-1.0-sdk-1.5.5.jar|jsr107cache-1.1.jar
+filesCopiedToWebInfLib=appengine-api-1.0-sdk-1.6.3.jar|appengine-api-labs-1.6.3.jar|appengine-jsr107cache-1.6.3.jar|jsr107cache-1.1.jar|datanucleus-appengine-1.0.10.final.jar|datanucleus-core-1.1.5.jar|datanucleus-jpa-1.1.5.jar|geronimo-jpa_3.0_spec-1.1.1.jar|geronimo-jta_1.1_spec-1.1.1.jar|jdo2-api-2.3-eb.jar
 gaeDeployDialogSettings=
 gaeIsEclipseDefaultInstPath=true
 googleCloudSqlEnabled=false
