Add missing .sdoc to bin-build. case 938

--- a/com.dynamo.cr.luaeditor/build.properties
+++ b/com.dynamo.cr.luaeditor/build.properties
@@ -8,4 +8,6 @@ bin.includes = plugin.xml,\
                DYNAMO_HOME/share/doc/script_doc.sdoc,\
                DYNAMO_HOME/share/doc/render_doc.sdoc,\
                DYNAMO_HOME/share/doc/gui_doc.sdoc,\
-               DYNAMO_HOME/share/doc/go_doc.sdoc
+               DYNAMO_HOME/share/doc/go_doc.sdoc,\
+               DYNAMO_HOME/share/doc/engine_doc.sdoc,\
+               DYNAMO_HOME/share/doc/gamesys_doc.sdoc
