Project template bundle and related server support. case 992 * New bundle com.dynamo.cr.templates for project templates * To configure templates located in the plugin use   the variable {templates_root} for path substitution

--- a/com.dynamo.cr/com.dynamo.cr.parent/pom.xml
+++ b/com.dynamo.cr/com.dynamo.cr.parent/pom.xml
@@ -117,6 +117,7 @@
         <module>../com.dynamo.cr.engine</module>
         <module>../com.dynamo.cr.bob</module>
         <module>../com.dynamo.cr.bob.test</module>
+        <module>../com.dynamo.cr.templates</module>
         <module>../javax.media.opengl</module>
     </modules>
 
