--- a/com.dynamo.cr/com.dynamo.cr.server/config/chmu.config
+++ b/com.dynamo.cr/com.dynamo.cr.server/config/chmu.config
@@ -4,7 +4,7 @@ filters: ".*?\\.git"
 service_port: 9998
 build_data_port: 6000
 persistence_unit_name: "unit-test"
-repository_root: "/Users/chmu/Projects/dynamo/test_repos"
+repository_root: "/tmp/test_repos"
 progress_re: "\\[(\\d+)/(\\d+)\\]"
 builtins_directory: "/Users/chmu/tmp/dynamo-home/content/builtins"
 smtp_host: "smtp.gmail.com"
@@ -44,7 +44,7 @@ exe_command: {
 }
 
 project_templates {
-    id: "bounce"
-    path: "/Users/chmu/Projects/dynamo/bounce"
-    description: "Bounce THE Game"
+    id: "side_scroller"
+    path: "{templates_root}/tutorials/side_scroller"
+    description: "Tutorial: Side-Scroller"
 }
