--- a/com.dynamo.cr/com.dynamo.cr.common/build.properties
+++ b/com.dynamo.cr/com.dynamo.cr.common/build.properties
@@ -22,7 +22,7 @@ bin.includes = META-INF/,\
                ext/jersey-client-1.11.jar,\
                ext/jersey-core-1.11.jar,\
                ext/slf4j/janino.jar,\
-               ext/slf4j/logback-classic-0.9.29.jar,\
-               ext/slf4j/logback-core-0.9.29.jar,\
-               ext/slf4j/slf4j-api-1.6.1.jar,\
-               DYNAMO_HOME/share/java/graphics.jar
+               DYNAMO_HOME/share/java/graphics.jar,\
+               ext/slf4j/logback-classic-1.0.3.jar,\
+               ext/slf4j/logback-core-1.0.3.jar,\
+               ext/slf4j/slf4j-api-1.6.4.jar
