Partially fixed the removal of "New Project". case 1001

--- a/com.dynamo.cr/com.dynamo.cr.editor/plugin.xml
+++ b/com.dynamo.cr/com.dynamo.cr.editor/plugin.xml
@@ -330,6 +330,14 @@
             description="Disable unwanted eclipse UI"
             id="com.dynamo.cr.editor.activities.disableEclipseUI"
             name="Disable">
+         <enabledWhen>
+            <with
+                  variable="true">
+               <equals
+                     value="false">
+               </equals>
+            </with>
+         </enabledWhen>
       </activity>
       <activityPatternBinding
             activityId="com.dynamo.cr.editor.activities.disableEclipseUI"
