--- a/com.dynamo.cr/com.dynamo.cr.editor/build.properties
+++ b/com.dynamo.cr/com.dynamo.cr.editor/build.properties
@@ -5,5 +5,6 @@ bin.includes = plugin.xml,\
                icons/,\
                splash.bmp,\
                plugin_customization.ini,\
-               lib/jetty-all-7.0.2.v20100331.jar
+               lib/jetty-all-7.0.2.v20100331.jar,\
+               data/
 source.. = src/
