--- a/com.dynamo.cr/com.dynamo.cr.common/.classpath
+++ b/com.dynamo.cr/com.dynamo.cr.common/.classpath
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="DYNAMO_HOME/share/java/resource.jar"/>
 	<classpathentry exported="true" kind="lib" path="ext/slf4j/logback-classic-1.0.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="ext/slf4j/logback-core-1.0.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="ext/slf4j/slf4j-api-1.6.4.jar"/>
