Remote target implementation. case 665
* New plugin com.dynamo.cr.target for target handling

--- a/com.dynamo.cr/com.dynamo.cr.common/.classpath
+++ b/com.dynamo.cr/com.dynamo.cr.common/.classpath
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="DYNAMO_HOME/share/java/upnp.jar"/>
+	<classpathentry exported="true" kind="lib" path="DYNAMO_HOME/share/java/engine.jar"/>
 	<classpathentry exported="true" kind="lib" path="DYNAMO_HOME/share/java/resource.jar"/>
 	<classpathentry exported="true" kind="lib" path="ext/slf4j/logback-classic-1.0.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="ext/slf4j/logback-core-1.0.3.jar"/>
