--- a/com.dynamo.cr/com.dynamo.cr.common/build.properties
+++ b/com.dynamo.cr/com.dynamo.cr.common/build.properties
@@ -26,4 +26,6 @@ bin.includes = META-INF/,\
                ext/slf4j/logback-classic-1.0.3.jar,\
                ext/slf4j/logback-core-1.0.3.jar,\
                ext/slf4j/slf4j-api-1.6.4.jar,\
-               DYNAMO_HOME/share/java/resource.jar
+               DYNAMO_HOME/share/java/resource.jar,\
+               DYNAMO_HOME/share/java/engine.jar,\
+               DYNAMO_HOME/share/java/upnp.jar
