Added missing pom.xml for target plug-in

--- a/com.dynamo.cr/com.dynamo.cr.parent/pom.xml
+++ b/com.dynamo.cr/com.dynamo.cr.parent/pom.xml
@@ -98,6 +98,8 @@
         <module>../com.dynamo.cr.integrationtest</module>
         <module>../com.dynamo.cr.server</module>
         <module>../com.dynamo.cr.server.test</module>
+        <module>../com.dynamo.cr.target</module>
+        <module>../com.dynamo.cr.target.test</module>
         <module>../com.dynamo.cr.client</module>
         <module>../com.dynamo.cr.client.test</module>
         <module>../com.dynamo.cr.guieditor</module>
